--- a/appointment.html
+++ b/appointment.html
@@ -319,7 +319,7 @@
             <a href="contact-us.html">Contact Us</a>
         </div>
         <div class="nav-right">
-            <a href="#" class="cart-icon">
+            <a href="cart.html" class="cart-icon">
                 🛒
                 <span class="cart-badge">0</span>
             </a>
